# CityNexus

./: .gitignore  Blog.md  LICENSE  README.md  THEMES.md  gen_rollouts.py  openenv.yaml  pyproject.toml  requirements-train.txt  requirements.txt
notebooks/: README.md  train_citynexus_colab.ipynb
runs/: memory.json  training.jsonl
scripts/: generate_cpu_runs.py
server/: Dockerfile  __init__.py  app.py  environment.py  models.py  space_README.md
src/citynexus/: __init__.py
src/citynexus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/citynexus/agents/: __init__.py  base.py  coordinator.py  delivery.py  emergency.py  messages.py  observability.py  planner.py  police.py  spaces.py  traffic.py
src/citynexus/city/: grid.py  zones.py
src/citynexus/entities/: __init__.py  delivery.py  incident.py  unit.py
src/citynexus/env/: core.py  events.py  physics.py  world_state.py
src/citynexus/memory/: __init__.py  schemas.py  store.py  writer.py
src/citynexus/rewards/: __init__.py  components.py  schemas.py  system.py
src/citynexus/scenarios/: __init__.py  generator.py  runner.py  schemas.py  shocks.py
src/citynexus/training/: __init__.py  config.py  evaluator.py  llm_planner.py  metrics.py  pipeline.py  policy.py  trajectory.py
src/citynexus/verify/: __init__.py  base.py  programmatic.py  rewards.py  schemas.py  semantic.py  system_state.py
tests/: test_smoke.py
web/: index.html  styles.css
web/data/: llm_rollouts.json
web/js/: main.js  playback.js  render.js  sim.js
